k8s/prod/collaboration-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collaboration-svc
  labels:
    app: collaboration-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collaboration-svc
  template:
    metadata:
      labels:
        app: collaboration-svc
    spec:
      containers:
        - name: collaboration-svc
          image: 272468461328.dkr.ecr.ap-southeast-1.amazonaws.com/pp-collaboration:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: collaboration-svc
  name: collaboration-svc
spec:
  selector:
    app: collaboration-svc
  type: ClusterIP
  ports:
    - port: 8002
      targetPort: 8002
