k8s/prod/question-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: question-svc
  labels:
    app: question-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: question-svc
  template:
    metadata:
      labels:
        app: question-svc
    spec:
      containers:
        - name: question-svc
          image: 272468461328.dkr.ecr.ap-southeast-1.amazonaws.com/cc-question:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8004
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: question-svc
  name: question-svc
spec:
  selector:
    app: question-svc
  type: ClusterIP
  ports:
    - port: 8004
      targetPort: 8004
